--- a/webapp/search-ads.html
+++ b/webapp/search-ads.html
@@ -8,6 +8,8 @@
     <input type="radio" name="placeType" value="bed"/>Miejsce w pokoju
 
     <!-- localization -->
+    <input type="text" name="city" placeholder="Miasto"/><br/>
+    <input type="text" name="district" placeholder="Dzielnica"/><br/>
 
     <!-- basic parameters -->
     <h3>Cena</h3>
@@ -32,11 +34,6 @@
     <input type="checkbox" name="smokingAllowed"/>Palenie dozwolone
     <input type="checkbox" name="isElevator"/>Winda
     <input type="checkbox" name="onlyLongTerm"/>Tylko wynajem długoterminowy
-
-
-
-
-
 
 </form>
 </body>
