parse parameteres from user

--- a/webapp/src/main/webapp/search-ads.html
+++ b/webapp/src/main/webapp/search-ads.html
@@ -60,15 +60,14 @@
     <input type="number" name="maxRooms" placeholder="Do" min="0"/><br/>
 
     <!-- more parameters -->
-    <p>Więcej parametrów</p>
-    <input type="radio" name="animalsAllowed" value="false" />Nie przepadam za zwierzakami<br/>
-    <input type="radio" name="animalsAllowed" value="true" />Mam zwierzaka!<br/><br/>
+    <input type="radio" name="animalsAllowed" value="false" />Mam alergię na zwierzęta<br/>
+    <input type="radio" name="animalsAllowed" value="true" />Mam zwierzaka<br/><br/>
 
-    <input type="radio" name="smokingAllowed" value="false" />Nie palę<br/>
-    <input type="radio" name="smokingAllowed" value="true" />Palę fajki<br/><br/>
+    <input type="radio" name="smokingAllowed" value="false" />Tylko ogłoszenia dla niepalących<br/>
+    <input type="radio" name="smokingAllowed" value="true" />Tylko ogłoszenia dla palących<br/><br/>
 
-    <input type="checkbox" name="isElevator"/>Jestem leniem, tylko z windą<br/>
-    <input type="checkbox" name="onlyLongTerm"/>Interesuje mnie tylko wynajem długoterminowy<br/>
+    <input type="checkbox" name="isElevator" value="true"/>Winda obowiązkowo<br/>
+    <input type="checkbox" name="onlyLongTerm" value="true"/>Interesuje mnie tylko wynajem długoterminowy<br/>
 
     <input type="submit"/>
     <input type="reset"/>
