good form, adding ads is working, good to review

--- a/webapp/src/main/webapp/add-announcement.html
+++ b/webapp/src/main/webapp/add-announcement.html
@@ -15,9 +15,9 @@
     Typ nieruchomości :
     <select name="placeType" required>
         <option value="" disabled selected hidden>Wybierz</option>
-        <option value="apartment">Mieszkanie</option>
-        <option value="room">Pokój</option>
-        <option value="bed">Miejsce w pokoju</option>
+        <option value="APARTMENT">Mieszkanie</option>
+        <option value="ROOM">Pokój</option>
+        <option value="BED">Miejsce w pokoju</option>
     </select> <br/><br/>
     Powierzchnia: <input type="number" name="area" placeholder="Podaj powierzchnie w m2" min="0" step="0.01" required/><br/><br/>
     Liczba pokoi:
@@ -59,18 +59,22 @@
         <option value="19">19</option>
         <option value="20">20</option>
     </select> <br/><br/>
-    Czy w budynku jest winda? <input type="radio" name="hasElevator" value="True"/> Tak
+    Czy w budynku jest winda?
+    <input type="radio" name="hasElevator" value="True" checked/> Tak
     <input type="radio" name="hasElevator" value="False"/> Nie <br/><br/>
-    Czy palenie w budynku jest dozwolone? <input type="radio" name="smokingAllowed" value="True"/> Tak
+    Czy palenie w budynku jest dozwolone?
+    <input type="radio" name="smokingAllowed" value="True" checked/> Tak
     <input type="radio" name="smokingAllowed" value="False"/> Nie <br/><br/>
-    Czy zwierzęta w budynku są dozwolone? <input type="radio" name="animalAllowed" value="True"/> Tak
+    Czy zwierzęta w budynku są dozwolone?
+    <input type="radio" name="animalAllowed" value="True" checked/> Tak
     <input type="radio" name="animalAllowed" value="False"/> Nie <br/><br/>
-    Czy preferujesz wynajem długoterminowy? <input type="radio" name="onlyLongTerm" value="True"/> Tak
+    Czy preferujesz wynajem długoterminowy?
+    <input type="radio" name="onlyLongTerm" value="True" checked/> Tak
     <input type="radio" name="onlyLongTerm" value="False"/> Nie <br/><br/>
-    Cena: <input type="number" name="price" placeholder="Cena w PLN" min="0" step="0.01"/><br/><br/>
+    Cena: <input type="number" name="price" placeholder="Cena w PLN" min="0" step="0.01" required/><br/><br/>
     Dodatkowy opis: <br/><br/>
-    <textarea name="description" cols="50"
-              rows="10" required>Tutaj mozesz umiescic dodatkowe informacje dotyczace wynajmu...</textarea> <br/><br/>
+    <textarea name="description" required cols="50"
+              rows="10"></textarea> <br/><br/>
     Podaj swoje imie i nazwisko: <input type="text" name="author" required/> <br/><br/>
     Zostaw swoj numer telefonu: <input type="text" name="phoneNumber" required/> <br/><br/>
     <input type="submit" name="save" value="Dodaj"/> <input type="reset" value="Wyczyść dane"/> <br/><br/>
