parsing user parameters works, parameters: city and district need to be improved

--- a/webapp/src/main/webapp/search-ads.html
+++ b/webapp/src/main/webapp/search-ads.html
@@ -6,8 +6,8 @@
 <form method="post" action="http://127.0.0.1:8080/appPartments/search-ads">
     <!-- place type -->
     <p>Typ nieruchomości</p>
-    <select>
-        <option value="" disabled selected hidden>Wybierz</option>
+    <select name="placeType">
+        <option value="all" selected>Pokaż wszystkie</option>
         <option value="apartment">Mieszkanie</option>
         <option value="room">Pokój</option>
         <option value="bed">Miejsce w pokoju</option>
