small change in form, good form

--- a/webapp/src/main/webapp/add-announcement.html
+++ b/webapp/src/main/webapp/add-announcement.html
@@ -76,7 +76,7 @@
     <textarea name="description" required cols="50"
               rows="10"></textarea> <br/><br/>
     Podaj swoje imie i nazwisko: <input type="text" name="author" required/> <br/><br/>
-    Zostaw swoj numer telefonu: <input type="text" name="phoneNumber" required/> <br/><br/>
+    Zostaw swoj numer telefonu: <input type="number" name="phoneNumber" required/> <br/><br/>
     <input type="submit" name="save" value="Dodaj"/> <input type="reset" value="Wyczyść dane"/> <br/><br/>
 </form>
 
