Upload of files, done

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>app-partments</title>
 </head>
 <body>
 <form method="get" action="/test" enctype="multipart/form-data">
     <input type="file" name="file">
-    <button type="submit">Wyslij</button>
+    <button type="submit">Wyślij</button>
 </form>
 </body>
 </html>
