--- a/webapp/src/main/webapp/add-announcement.html
+++ b/webapp/src/main/webapp/add-announcement.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Dodaj ogłoszenie</h1>
-<form method="post" action="add-announcement">
+<form method="post" action="add-announcement" enctype="multipart/form-data">
     Tytuł ogłoszenia: <input type="text" name="title" required/><br/><br/>
     Miasto: <input type="text" name="city" required/><br/><br/>
     Dzielnica: <input type="text" name="district" required/><br/><br/>
@@ -77,6 +77,7 @@
               rows="10"></textarea> <br/><br/>
     Podaj swoje imie i nazwisko: <input type="text" name="author" required/> <br/><br/>
     Zostaw swoj numer telefonu: <input type="number" name="phoneNumber" required/> <br/><br/>
+    Dodaj zdjęcie: <input type="file" name="image"/><br/><br/>
     <input type="submit" name="save" value="Dodaj"/> <input type="reset" value="Wyczyść dane"/> <br/><br/>
 </form>
 
