--- a/webapp/src/main/webapp/index.html
+++ b/webapp/src/main/webapp/index.html
@@ -5,7 +5,7 @@
     <title>app-partments</title>
 </head>
 <body>
-<form method="get" action="/test" enctype="multipart/form-data">
+<form method="get" action="/create-db" enctype="multipart/form-data">
     <input type="file" name="file">
     <button type="submit">Wyślij</button>
 </form>
