--- a/webapp/src/main/webapp/add-announcement.html
+++ b/webapp/src/main/webapp/add-announcement.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Dodaj ogłoszenie</h1>
-<form method="post" action="add-announcement" enctype="multipart/form-data">
+<form method="post" action="add" enctype="multipart/form-data">
     Tytuł ogłoszenia: <input type="text" name="title" required/><br/><br/>
     Miasto: <input type="text" name="city" required/><br/><br/>
     Dzielnica: <input type="text" name="district" required/><br/><br/>
